--- a/bootfy.css
+++ b/bootfy.css
@@ -1,28 +1,28 @@
 /*!
- * BootAlert CSS
+ * bootfy CSS
  * @author odahcam
  * @version 1.0.0
  **/
 
-.bootAlert {
+.bootfy {
     opacity: 0;
     filter: alpha(opacity=0);
 }
 
-.bootAlert .glyphicon {
+.bootfy .glyphicon {
     font-size: 20px;
     float: left;
     margin-right: 14px;
 }
 
-.bootAlert p {
+.bootfy p {
     display: table;
 }
 
-.container-bootAlert {
+.container-bootfy {
     position: fixed;
     width: 360px;
-    max-width: 90%;
+    max-width: 95%;
     z-index: 2060;
     left: 20px;
     right: 20px;
@@ -30,42 +30,27 @@
     bottom: initial;
 }
 
-.container-bootAlert.top-right {
+.container-bootfy.top {
     top: 20px;
+}
+
+.container-bootfy.bottom {
+    bottom: 20px;
+}
+
+.container-bootfy.right {
     left: initial;
 }
 
-.container-bootAlert.top-left {
-    top: 20px;
+.container-bootfy.left {
     right: initial;
 }
 
-.container-bootAlert.top-center {
-    top: 20px;
+.container-bootfy.center {
     left: 50%;
     -webkit-transform: translateY(-50%);
-       -moz-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-         -o-transform: translateY(-50%);
-            transform: translateY(-50%);
-}
-
-.container-bootAlert.bottom-right {
-    bottom: 20px;
-    left: initial;
-}
-
-.container-bootAlert.bottom-left {
-    bottom: 20px;
-    right: initial;
-}
-
-.container-bootAlert.bottom-center {
-    bottom: 20px;
-    left: 50%;
-    -webkit-transform: translateY(-50%);
-       -moz-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-         -o-transform: translateY(-50%);
-            transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
