--- a/bootify.css
+++ b/bootify.css
@@ -6,63 +6,60 @@
 
 .bootify {
     opacity: 0;
-    filter: alpha(opacity=0);
+    filter: alpha(opacity=0)
 }
 
 .bootify>.glyphicon {
+    display: inline-block;
     float: left;
     font-size: 20px;
     margin-right: 14px;
 }
 
 .bootify>.container-alert {
-    display: inline-block;
+    display: block;
     max-width: 100%;
     overflow: auto;
-}
-
-.bootify>* {
-    vertical-align: middle;
 }
 
 .bootify>.container-alert>.content {
     display: table;
     width: 100%;
-    height: 100%;
+    height: 100%
 }
 
 .container-bootify {
     position: fixed;
-    width: 390px;
-    max-width: 95%;
-    z-index: 2060;
     left: 20px;
     right: 20px;
     top: initial;
     bottom: initial;
+    width: 390px;
+    max-width: 95%;
+    z-index: 2060
 }
 
 .container-bootify.top {
-    top: 20px;
+    top: 20px
 }
 
 .container-bootify.bottom {
-    bottom: 20px;
+    bottom: 20px
 }
 
 .container-bootify.right {
-    left: initial;
+    left: initial
 }
 
 .container-bootify.left {
-    right: initial;
+    right: initial
 }
 
 .container-bootify.center {
     left: 50%;
     -webkit-transform: translateX(-50%);
-    -moz-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    -o-transform: translateX(-50%);
-    transform: translateX(-50%);
+       -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+         -o-transform: translateX(-50%);
+            transform: translateX(-50%)
 }
