--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,5 +9,5 @@
 }
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
-  coor: #a6e/
+  color: #a6e;
 }
