--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/bootoast.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script src="{{ '/bootoast.js?v=' | append: site.github.build_revision | relative_url }}"></script>
   </head>
   <body>
     <section class="page-header">
