--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,16 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="{{ '/bootoast.css?v=' | append: site.github.build_revision | relative_url }}">
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+      crossorigin="anonymous"></script>
+    
+    <link href="{{ '/bootoast.css?v=' | append: site.github.build_revision | relative_url }}" rel="preload" onload="this.rel='stylesheet'">
     <script src="{{ '/bootoast.js?v=' | append: site.github.build_revision | relative_url }}"></script>
+    
   </head>
   <body>
     <section class="page-header">
