--- a/bootoast.css
+++ b/bootoast.css
@@ -16,19 +16,19 @@
     margin-right: 14px;
 }
 
-.bootoast>.container-alert {
+.bootoast>.bootoast-alert-container {
     display: block;
     max-width: 100%;
     overflow: auto;
 }
 
-.bootoast>.container-alert>.content {
+.bootoast>.bootoast-alert-container>.bootoast-alert-content {
     display: table;
     width: 100%;
     height: 100%
 }
 
-.container-bootoast {
+.bootoast-container {
     position: fixed;
     left: 20px;
     right: 20px;
@@ -39,23 +39,23 @@
     z-index: 2060
 }
 
-.container-bootoast.top {
+.bootoast-container.top {
     top: 20px
 }
 
-.container-bootoast.bottom {
+.bootoast-container.bottom {
     bottom: 20px
 }
 
-.container-bootoast.right {
+.bootoast-container.right {
     left: initial
 }
 
-.container-bootoast.left {
+.bootoast-container.left {
     right: initial
 }
 
-.container-bootoast.center {
+.bootoast-container.center {
     left: 50%;
     -webkit-transform: translateX(-50%);
        -moz-transform: translateX(-50%);
