--- a/src/bootoast.css
+++ b/src/bootoast.css
@@ -27,6 +27,34 @@
     height: 100%
 }
 
+.bootoast.alert-default {
+    background: #eee;
+}
+
+.bootoast>.progress.progress-bottom {
+    width: auto;
+    margin-left: -1.25rem;
+    margin-right: -1.25rem;
+}
+
+.bootoast>.progress.progress-bottom {
+    margin-bottom: -.75rem;
+}
+
+.bootoast>.progress.progress-top {
+    margin-top: -.75rem;
+}
+
+.bootoast>.progress.progress-background {
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .35;
+}
+
 .bootoast-container {
     position: fixed;
     left: 20px;
@@ -35,7 +63,7 @@
     bottom: initial;
     width: 390px;
     max-width: 95%;
-    z-index: 2060
+    z-index: 999999
 }
 
 .bootoast-container.top {
@@ -57,8 +85,8 @@
 .bootoast-container.center {
     left: 50%;
     -webkit-transform: translateX(-50%);
-       -moz-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-         -o-transform: translateX(-50%);
-            transform: translateX(-50%)
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%)
 }
