nothing special, just very big small changes

--- a/src/bootoast.css
+++ b/src/bootoast.css
@@ -10,6 +10,7 @@
 
 .bootoast>.glyphicon {
     display: inline-block;
+    /* yeah, this float is a "hack" */
     float: left;
     font-size: 20px;
     margin-right: 14px;
